--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,11 +15,77 @@ li a {
   display: block;
   color: white;
   text-align: center;
-  padding: 14px 16px;
+  font-family: Fancy;
+  font-size: 20px;
+  padding: 14px 25px;
   text-decoration: none;
 }
 
 li a:hover {
   background-color: #111;
 }
+.WeCode{
 
+  padding-bottom: 16px;
+  width: 300px;
+  height: 44px;
+
+}
+
+.register{
+
+  margin-left: 25%;
+
+}
+
+
+
+input[type=text], input[type=password] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+
+/* Set a style for all buttons */
+.button {
+  background-color: red;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+}
+
+/* Extra styles for the cancel button */
+.cancelbtn {
+  padding: 14px 20px;
+  background-color: #f44336;
+}
+
+/* Float cancel and signup buttons and add an equal width */
+.cancelbtn,.signupbtn {
+  
+  width: 50%;
+}
+
+/* Add padding to container elements */
+.container {
+  padding-right: 20px;
+}
+
+/* Clear floats */
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+/* Change styles for cancel button and signup button on extra small screens */
+@media screen and (max-width: 300px) {
+  .cancelbtn, .signupbtn {
+   width: 100%;
+}
