--- a/templates/base.html
+++ b/templates/base.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="../static/css/style.css" />
+  <link rel="stylesheet" type="text/css" href="../static/css/style.css" >
+  <link rel="stylesheet" type="text/css" href="../static/css/fonts.css" >
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>WeCode Portal</title> 
   <ul>
-    <li><a href="home">Home</a></li>
+    <li><a href=".">Home</a></li>
+    <li><a href="feed">Feed</a></li>
+    <li><a href="register">Rigester</a></li> 
+    <li class="WeCode"><a href=".">We Code</a></li>
+    <!-- <i class="fa fa-git" style="font-size:30px"></i>
+    <i class="fa fa-facebook-square" style="font-size:30px"></i> -->
+    <i class="fa fa-user-circle" style="font-size:24px"></i>
+    <i class="fa fa-envelope" style="font-size:27px"></i>
+
+
 <!-- TODO: add more links on the navigation bar here -->
   </ul>
 </head>
-<body>
+<body background="../static/images/background.jpg">
 {% block body %}
+
+
 <h1>My home page</h1>
 
 <p>My first paragraph.</p>
