--- a/templates/register.html
+++ b/templates/register.html
@@ -1,8 +1,69 @@
 {% extends "base.html" %}
 
 {% block body %}
-<h1>Register Page</h1>
+<h1>Welcom </h1>
 
 <!-- TODO: implement register page -->
+<div class= "register">
+	<!-- <form action="/home" method="post">
+		<h1>signin</h1>
+			email:
+			<br>
+			<input id="form" type="email" name="email">
+			<br>
+			password:
+			<br>
+			<input id="form"type="text" name="passowrd" >
+			<br>
+			<input type="submit" value="Submit">
+	</form> -->
+
+
+	<!-- <form action="/home" method="post">
+		<h1>signup</h1>
+			First name:
+			<input id="form" type="text" name="first name" required >
+			<br>
+			last name:
+			<input id="form"type="text" name="last name" required>
+			<br>
+			username:
+			<input id="form" type ="text" name="username" required>
+			<br>
+			email:
+			<input id="form" type ="email" name="email" required>
+			<br>
+			hometown:
+			<input id="form" type ="text" name="hometown" required>
+			<br>
+			you're website link:
+			<input id="form" type ="text" name="link" required>
+
+			<input type="submit" value="Submit">
+	</form> -->
+	<form action="/action_page.php" style="border:1px solid #ccc">
+  <div class="container">
+    <label><b>Email</b></label>
+    <input id="form"type="text" placeholder="Enter Email" name="email" required>
+    <br>
+
+    <label><b>Password</b></label>
+    <input id="form" type="password" placeholder="Enter Password" name="psw" required>
+    <br>
+    <label><b>Repeat Password</b></label>
+    <inputid="form" type="password" placeholder="Repeat Password" name="psw-repeat" required>
+    <input type="checkbox" checked="checked"> Remember me
+   <!--  <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p> -->
+   <br>
+    <div class="clearfix">
+      <button type="button" class="cancelbtn">Cancel</button>
+      <button type="submit" class="signupbtn">Sign Up</button>
+    </div>
+  </div>
+</form>
+
+</div>
+
+
 
 {% endblock %}
