--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,7 +22,7 @@ li a {
 }
 
 li a:hover {
-  background-color: #111;
+  background-color: #B7DEEE;
 }
 .WeCode{
 
@@ -35,57 +35,29 @@ li a:hover {
 .register{
 
   margin-left: 25%;
+  width: 30%;
+  height: 10px;
 
 }
+.homepage {
+  margin-left: 33%;
+  font-family: Courier
 
-
-
-input[type=text], input[type=password] {
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
+}
+.table{
+  width: 100px;
 }
 
-/* Set a style for all buttons */
-.button {
-  background-color: red;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  cursor: pointer;
-  width: 100%;
+.homepic{
+  margin-left: 11%;
 }
+.form{
+  margin-right: 20%;
+  width: 85%;
+  height:20px;
+  border-radius: 40px;
 
-/* Extra styles for the cancel button */
-.cancelbtn {
-  padding: 14px 20px;
-  background-color: #f44336;
 }
-
-/* Float cancel and signup buttons and add an equal width */
-.cancelbtn,.signupbtn {
-  
-  width: 50%;
-}
-
-/* Add padding to container elements */
-.container {
-  padding-right: 20px;
-}
-
-/* Clear floats */
-.clearfix::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-
-/* Change styles for cancel button and signup button on extra small screens */
-@media screen and (max-width: 300px) {
-  .cancelbtn, .signupbtn {
-   width: 100%;
+.background {
+  background-color: #B7DEEE
 }
