--- a/templates/register.html
+++ b/templates/register.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
 {% block body %}
-<h1>Welcom </h1>
+<h1 class="homepage">Welcome to We Code Portal </h1>
 
 <!-- TODO: implement register page -->
-<div class= "register">
+
 	<!-- <form action="/home" method="post">
 		<h1>signin</h1>
 			email:
@@ -18,51 +18,60 @@
 			<input type="submit" value="Submit">
 	</form> -->
 
-
-	<!-- <form action="/home" method="post">
+	<img class="homepic" src="../static/images/cfp.png">
+<div class="register">
+	<center><form action="/users" method="POST">
 		<h1>signup</h1>
-			First name:
-			<input id="form" type="text" name="first name" required >
+			<h2>First name:</h2>
+			
+			<input class="form" type="text" name="first name" placeholder="First name " required >
 			<br>
-			last name:
-			<input id="form"type="text" name="last name" required>
+			<h2>last name:</h2>
+			
+			<input class="form"type="text" name="last name" placeholder="lastname" required>
 			<br>
-			username:
-			<input id="form" type ="text" name="username" required>
+			<h2>username:</h2>
+			
+			<input class="form" type ="text" name="username" placeholder="username"required>
 			<br>
-			email:
-			<input id="form" type ="email" name="email" required>
+			<h2>email:</h2>
+			
+			<input class="form" type ="email" name="email" placeholder="email"required>
 			<br>
-			hometown:
-			<input id="form" type ="text" name="hometown" required>
+			<h2>hometown:</h2>
+			<input class="form" type ="text" name="hometown" placeholder="hometown"required>
 			<br>
-			you're website link:
-			<input id="form" type ="text" name="link" required>
+			<h2>you're website link:</h2>
+			
+			<input class="form" type ="text" name="link" placeholder="website link"required>
 
 			<input type="submit" value="Submit">
-	</form> -->
-	<form action="/action_page.php" style="border:1px solid #ccc">
+	</form> </center>
+</div>
+{% if taken == 1 %}
+	<h1>this username is already taken</h1>
+{% endif %}
+
+	<!-- <form action="/action_page.php" style="border:1px solid #ccc">
   <div class="container">
     <label><b>Email</b></label>
-    <input id="form"type="text" placeholder="Enter Email" name="email" required>
-    <br>
+    <input type="text" placeholder="Enter Email" name="email" required>
 
     <label><b>Password</b></label>
-    <input id="form" type="password" placeholder="Enter Password" name="psw" required>
-    <br>
+    <input type="password" placeholder="Enter Password" name="psw" required>
+
     <label><b>Repeat Password</b></label>
-    <inputid="form" type="password" placeholder="Repeat Password" name="psw-repeat" required>
+    <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
     <input type="checkbox" checked="checked"> Remember me
-   <!--  <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p> -->
-   <br>
+    <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
+
     <div class="clearfix">
       <button type="button" class="cancelbtn">Cancel</button>
       <button type="submit" class="signupbtn">Sign Up</button>
     </div>
   </div>
-</form>
+ -->
 
-</div>
 
 
 
