--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,18 @@
 
 {% block body %}
 
-<h1>Home Page</h1>
+<h1> </h1>
+<IMG STYLE="position:absolute; TOP:270px; LEFT:1000px; WIDTH:300px; HEIGHT:192px" SRC="../static/images/pm.jpg"
+<IMG STYLE="position:absolute; TOP:50px; LEFT:1060px; WIDTH:300px; HEIGHT:150px" SRC="../static/images/pwi.jpg">
+<IMG STYLE="position:absolute; TOP:70px; LEFT:320px; WIDTH:300px; HEIGHT:190px" SRC="../static/images/pg.jpg">
+<IMG STYLE="position:absolute; TOP:270px; LEFT:320px; WIDTH:650px; HEIGHT:100px" SRC="../static/images/cfp.png">
+<IMG STYLE="position:absolute; TOP:70px; LEFT:640px; WIDTH:300px; HEIGHT:190px" SRC="../static/images/wb.jpg">
+<IMG STYLE="position:absolute; TOP:70px; LEFT:970px; WIDTH:300px; HEIGHT:190px" SRC="../ static/images/sp.jpg">
+<IMG STYLE="position:absolute; TOP:70px; LEFT:10px; WIDTH:300px; HEIGHT:192px" SRC="../static/images/y1w.jpg">
+<IMG STYLE="position:absolute; TOP:70px; LEFT:10px; WIDTH:300px; HEIGHT:192px" SRC="../static/images/y1w.jpg">
+<IMG STYLE="position:absolute; TOP:270px; LEFT:10px; WIDTH:300px; HEIGHT:192px" SRC="../static/images/fp.jpg">
+<h3style=" margin-left:280px; margin-top:100px"> We Code is one of the most amazing youth activities that is sponsored by Jawwal across Palestine. It educates high school students for three years with the help of Stanford graduates in the fields of computer science and coding. The program is not limited to this as it also lectures students on Design thinking and builds a creative mind that thinks out of the box. This program has an effect on the Palestinian generations. Thus, it helps to build a foundation for the long-term development of technology in Palestine and tries to close the huge gap in technology related fields in Palestine.</h3>
+
 
 <!-- TODO: implement home page. -->
 
