--- a/static/css/style.css
+++ b/static/css/style.css
@@ -35,14 +35,14 @@ li a:hover {
 }
 
 .register{
-
-  margin-left: 25%;
-  width: 30%;
+  background-color: lightblue;
+  margin-left: 15%;
+  width: 40%;
   height: 10px;
 
 }
 .homepage {
-  margin-left: 33%;
+  margin-left: 26%;
   font-family: Courier
 
 }
@@ -50,18 +50,50 @@ li a:hover {
   width: 100px;
 }
 
+.best {
+  margin-left: 21%;
+  width: 55%;
+  border-radius: 8px;
+  border-color: aqua;
+  height: 30px;
+  text-align: center;
 
-
-.homepic{
-  margin-left: 11%;
 }
-.form{
-  margin-right: 20%;
-  width: 85%;
-  height:20px;
-  border-radius: 40px;
+.forms{
+  background-color: lightgray;
+  border-radius: 5px;
+  margin-left: 34%;
+  margin-right: 33%;
+
 
 }
 .background {
   background-color: #B7DEEE
+}
+.feed{
+  border-radius: 5px;
+  border-color: black;
+  margin-top: 1%;
+}
+.post{
+  border: 5px solid gray;
+}
+.feedx{
+  margin-top: 1%;
+  background-color: lightgray;
+  margin-left: 22%;
+  margin-right: 22%;
+}
+.registerbt{
+  margin-left: 35%;
+  height: 42px;
+  width: 29%;
+  border-color: aqua;
+  background-clip: content-box;
+  border-radius: 15px;
+}
+.post2{
+  background-color: lightgray;
+  margin-right: 30%;
+  margin-left:30%;
 }
