--- a/templates/showall.html
+++ b/templates/showall.html
@@ -7,26 +7,26 @@
 {% block body %}	
 	<table>
 		<tr>
-			<td>name</td>
+			<td><h2>name</h2></td>
 			<!-- <td>lastname</td>
 			<td>username</td> -->
-			<td>email</td>
-			<td>message</td>
+			<td><h2>email</h2></td>
+			<td><h2>message</h2></td>
 			<!-- <td>hometown</td>
 			<td>link</td> -->
 		</tr>
 
 			{% for person in contact %}
-		<tr>
-			<td>{{person.name}} </td>
+		<tr><h3>
+			<td class="usershow">{{person.name}} </td>
 			<!-- <td> {{person.lastname}} </td>
 			<td>{{person.username}} </td> -->
-			<td>{{person.email}}</td>
-			<td>{{person.message}}</td>
+			<td class="usershow">{{person.email}}</td>
+			<td class="usershow">{{person.message}}</td>
 			<!-- <td>{{person.hometown}}</td>
 			<td>{{person.link}}</td> -->
 
-		</tr>
+		</tr></h3>
 			{% endfor %}
 
 
