--- a/templates/base.html
+++ b/templates/base.html
@@ -19,9 +19,13 @@
 <!-- TODO: add more links on the navigation bar here -->
   </ul>
 </head>
-<body class="background">
+<body>
+<div class="container">
+  <div class="content">
 {% block body %}
 
 {% endblock%}
+</div>
+</div>
 </body>
 </html>
