--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
 <head>
   <link rel="stylesheet" type="text/css" href="../static/css/style.css" >
   <link rel="stylesheet" type="text/css" href="../static/css/fonts.css" >
+  <link rel="stylesheet" type="text/css" href="../static/css/w3.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>WeCode Portal</title> 
   <ul>
@@ -11,10 +12,6 @@
     <li><a href="register">register</a></li>
     <li><a href="showall">All users</a></li> 
     <li class="WeCode"><a href="home">We Code</a></li>
-    <!-- <i class="fa fa-git" style="font-size:30px"></i>
-    <i class="fa fa-facebook-square" style="font-size:30px"></i> -->
-    <a href=""></a>><i class="fa fa-user-circle" style="font-size:24px"></i></a>
-    <i class="fa fa-envelope" style="font-size:27px"><a href="contactus"></a></i> -->
 
 
 
