--- a/templates/home.html
+++ b/templates/home.html
@@ -14,11 +14,11 @@
 	<IMG id="fp" SRC="../static/images/fp.jpg">
 
 </div>
-<h2 id="wci"> We Code is one of the most amazing youth activities that is sponsored by Jawwal across Palestine. It educates high school students for three years with the help of Stanford graduates in the fields of computer science and coding. The program is not limited to this as it also lectures students on Design thinking and builds a creative mind that thinks out of the box. This program has an effect on the Palestinian generations. Thus, it helps to build a foundation for the long-term development of technology in Palestine and tries to close the huge gap in technology related fields in Palestine.</h2>
-<!--id-->
-<div>
+<div class="cv2">
 <iframe class="cv" src="https://www.youtube.com/embed/hpFQeNgfkQw" frameborder="0" allowfullscreen></iframe>
 </div>
+<h2 id="wci"> We Code is one of the most amazing youth activities that is sponsored by Jawwal across Palestine. It educates high school students for three years with the help of Stanford graduates in the fields of computer science and coding. The program is not limited to this as it also lectures students on Design thinking and builds a creative mind that thinks out of the box. This program has an effect on the Palestinian generations. Thus, it helps to build a foundation for the long-term development of technology in Palestine and tries to close the huge gap in technology related fields in Palestine.</h2>
+<!--id-->
 <!--class-->
 	
 </div>
