--- a/templates/register.html
+++ b/templates/register.html
@@ -48,7 +48,7 @@
 			<input  type ="text" name="link" placeholder="website link"required class="best">
 			<br>
 			<br>
-			<input type="submit" value="register" class="registerbt">
+			<input type="submit" value="register" class="registerbt w3-btn w3-white w3-border w3-border-red w3-round-large">
 	</form> 
 
 {% if taken == 1 %}
