--- a/templates/showall1.html
+++ b/templates/showall1.html
@@ -5,13 +5,18 @@
 {% endblock %}
 
 {% block body %}	
-	<table>
+	<table class="w3-table">
 		<tr>
 			<td><h2>firstname</h2></td>
+			
 			<td><h2>lastname</h2></td>
+			
 			<td><h2>username</h2></td>
+			
 			<td><h2>email</h2></td>
+			
 			<td><h2>hometown</h2></td>
+			
 			<td><h2>link</h2></td>
 		</tr>
 
