--- a/templates/home.html
+++ b/templates/home.html
@@ -15,19 +15,23 @@
 
 </div>
 
-<div class="cv2">
-<iframe class="cv" src="https://www.youtube.com/embed/hpFQeNgfkQw" frameborder="0" allowfullscreen></iframe>
+<div>
+<iframe class="video" src="https://www.youtube.com/embed/hpFQeNgfkQw" frameborder="0" allowfullscreen></iframe>
 
 </div>
 <div>
-<<<<<<< HEAD
-	<h2 id="wci"> We Code is one of the most amazing youth activities that is sponsored by Jawwal across Palestine. It educates high school students for three years with the help of Stanford graduates in the fields of computer science and coding. The program is not limited to this as it also lectures students on Design thinking and builds a creative mind that thinks out of the box. This program has an effect on the Palestinian generations. Thus, it helps to build a foundation for the long-term development of technology in Palestine and tries to close the huge gap in technology related fields in Palestine.</h2>
-=======
 <h2 id="wci"> We Code is one of the most amazing youth activities that is sponsored by Jawwal across Palestine. It educates high school students for three years with the help of Stanford graduates in the fields of computer science and coding. The program is not limited to this as it also lectures students on Design thinking and builds a creative mind that thinks out of the box. This program has an effect on the Palestinian generations. Thus, it helps to build a foundation for the long-term development of technology in Palestine and tries to close the huge gap in technology related fields in Palestine.</h2>
->>>>>>> 46efa3d5a3b011e57e0f7a5665dcb51c981cdde1
-<!--id-->
-<!--class-->
 	
+</div>
+<div>
+	<img class="photos" src="../static/images/lp.jpg">
+	<p class="hometxt"> My name is Layan Sayeh and I am a 15 year old student in Pioneers Baccalaureate school. I love sports, arts and computers. I am a two year long programmer who worked along with my partner on this project. This website is for we code students to share their thoughts and concerns about the program or any bugs that appear in their code. Its also for people to know about the great program that I was lucky to be accepted to.</p>
+</div>
+<br>
+<br>
+<div>
+	<img class="photos" src="../static/images/sc.jpg">
+	<p class="hometxt"> My name is Salem Mufarreh. I am a 16 year old student who studies at the Greek Catholic School in Ramallah. I love programming and I am a workaholic. I made this website with my partner in four days to create a way for We code students to communicate and share their experiences. </p>
 </div>
 
 <!-- TODO: implement home page. -->
