--- a/templates/register.html
+++ b/templates/register.html
@@ -18,7 +18,7 @@
 			<input type="submit" value="Submit">
 	</form> -->
 
-	<img class="homepic" src="../static/images/cfp.png">
+	<img src="../static/images/cfp.png">
 
 
 	<form class="forms" action="/users" method="POST">
