--- a/templates/register.html
+++ b/templates/register.html
@@ -23,7 +23,7 @@
 
 	<form class="forms" action="/users" method="POST">
 
-		<center><h1>signup</h1></center>
+		<center><h1>Signup</h1></center>
 		
 			
 			<input  name="first name" placeholder="First name " required class="best">
