--- a/templates/base.html
+++ b/templates/base.html
@@ -5,13 +5,15 @@
   <link rel="stylesheet" type="text/css" href="../static/css/fonts.css" >
   <link rel="stylesheet" type="text/css" href="../static/css/w3.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
+
   <title>WeCode Portal</title> 
   <ul>
     <li><a href="home">Home</a></li>
     <li><a href="feed">Feed</a></li>
-    <li><a href="register">register</a></li>
-    <li><a href="showall">All users</a></li> 
-    <li class="WeCode"><a href="home">We Code</a></li>
+    <li><a href="register">Register</a></li>
+    <li><a href="showall">All Users</a></li> 
+    <center><li class="WeCode"><a href="home">We Code</a></li><center>
 
 
 
