delete the all users bt

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,13 +12,14 @@
     <li><a href="home">Home</a></li>
     <li><a href="feed">Feed</a></li>
     <li><a href="register">Register</a></li>
-    <li><a href="showall">All Users</a></li> 
+   <!--  <li><a href="showall">All Users</a></li>  -->
     <center><li class="WeCode"><a href="home">We Code</a></li><center>
 
 
 
 <!-- TODO: add more links on the navigation bar here -->
   </ul>
+
 </head>
 <body>
 <img src='../static/images/back2.png' id='bg-image'>
