--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     <li><a href="home">Home</a></li>
     <li><a href="feed">Feed</a></li>
     <li><a href="register">Register</a></li>
-   <!--  <li><a href="showall">All Users</a></li>  -->
+    <li><a href="showall">All Users</a></li>
     <center><li class="WeCode"><a href="home">We Code</a></li><center>
 
 
