new avatar for all users

--- a/templates/showall1.html
+++ b/templates/showall1.html
@@ -32,7 +32,7 @@
 		</tr> -->
 		<ul class="w3-ul w3-card-4 show">
 		  <li class="w3-padding-16">
-		    <img src="../static/images/img_avatar2.png" class="w3-left w3-circle w3-margin-right" style="width:50px">
+		    <img src="../static/images/emoji.png" class="w3-left w3-circle w3-margin-right" style="width:50px">
 		    <span class="w3-large">{{person.firstname}} {{person.lastname}}</span><br>
 		    <span class="nametag">
 		    	{{person.username}} 
