--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block body %}
-
+<center><h1>We Code</h1></center>
 
 <div>
 	<IMG id="pm" SRC="../static/images/pm.jpg"
@@ -20,10 +20,12 @@
 
 </div>
 <div>
+	<center class="hometxt22">About We Code</center>
 <h2 id="wci"> We Code is one of the most amazing youth activities that is sponsored by Jawwal across Palestine. It educates high school students for three years with the help of Stanford graduates in the fields of computer science and coding. The program is not limited to this as it also lectures students on Design thinking and builds a creative mind that thinks out of the box. This program has an effect on the Palestinian generations. Thus, it helps to build a foundation for the long-term development of technology in Palestine and tries to close the huge gap in technology related fields in Palestine.</h2>
 	
 </div>
 <div>
+	<center class="hometxt22">About Us</center>
 	<img class="photos" src="../static/images/lp.jpg">
 	<p class="hometxt"> My name is Layan Sayeh and I am a 15 year old student in Pioneers Baccalaureate school. I love sports, arts and computers. I am a two year long programmer who worked along with my partner on this project. This website is for we code students to share their thoughts and concerns about the program or any bugs that appear in their code. Its also for people to know about the great program that I was lucky to be accepted to.
 		you can contact me with :
