--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
     <li><a href="feed">Feed</a></li>
     <li><a href="register">Register</a></li>
     <li><a href="showall">All Users</a></li>
-    <center><li class="WeCode"><a href="home">We Code</a></li><center>
+    <center><li class="WeCode"><a href="home">We Code</a></li></center>
 
 
 
